<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <string name="btn_login">Login</string>
    <string name="txt_username">UserName</string>
    <string name="txt_password">Password</string>
    <string name="txt_version">Version 1.0</string>
    <string name="txtIntents">Intents</string>
    <string name="txtImplicit">Implicit</string>
    <string name="txtExplicit">Explicit</string>
    <string name="txtYouTube">YouTube</string>
    <string name="txtGoogleMaps">Google Maps</string>
    <string name="txtMessage">Are you sure?</string>
    <string name="txtOk">OK</string>
    <string name="txtCancel">CANCEL</string>
    <string name="btn_1">Button1</string>
    <string name="btn_2">Button2</string>
    <string name="btn_3">Button3</string>
    <string name="btn_4">Button4</string>
    <string name="txt_dni">DNI</string>
    <string name="txt_address">Address</string>
    <string name="txt_country">Country</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_save">Save</string>
</resources>
