<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Main2Activity">

    <TextView
        style="@style/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtIntents" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnImp1"
            style="@style/tvSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtImplicit" />

        <Button
            android:id="@+id/btnImp2"
            style="@style/tvSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtYouTube" />

        <Button
            android:id="@+id/btnExp2"
            style="@style/tvSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtGoogleMaps" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tvMsg"
            style="@style/tvVersionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login" />

    </LinearLayout>


</LinearLayout>